@@ -1,3 +1,9 @@
+1999-08-08  Ian Lance Taylor  <ian@zembu.com>
+
+	* configure.in: Define and substitute GDBINIT.  Change AC_OUTPUT
+	line to crate ${GDBINIT} rather than .gdbinit.
+	* configure, Makefile.in, doc/Makefile.in: Rebuild.
+
 Fri Aug  6 12:12:44 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* config/tc-hppa.c (pa_ip, case '?'): Add missing break.
